feat(alacritty): start in full screen mode

--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -13,6 +13,7 @@ decorations = "Buttonless"
 opacity = 0.90
 blur = true
 option_as_alt = "Both"
+startup_mode = "SimpleFullscreen"
 
 [cursor]
 [cursor.style]
